# WarpFoundry

./: .codex_test_output.txt  .env.example  .gitattributes  .gitignore  README.md  TESTPLAN.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.codex_manager/: AGENT_PROTOCOL.md  profile_chain.prof  profile_chain_after.prof  profile_pipeline.prof  profile_pipeline_after.prof
.codex_manager/owner/: FEATURE_DREAMS.md  GENERAL_REQUEST_HISTORY.jsonl  TODO_WISHLIST.md  decision_board.json
.github/workflows/: ci.yml
docs/: AGENT_PROTOCOL.md  CLI_REFERENCE.md  LICENSING_AND_COMMERCIAL.md  MODEL_WATCHDOG.md  OUTPUTS_AND_ARTIFACTS.md  QUICKSTART.md  REQUESTED_FEATURES_TODO.md  TROUBLESHOOTING.md  TUTORIAL.md  USER_FRIENDLY_IMPROVEMENTS.md
examples/: run_loop.py  run_once.py
src/codex_manager/: __init__.py  __main__.py  agent_runner.py  agent_signals.py  artifact_retention.py  claude_code.py  codex_cli.py  encoding_hygiene.py  eval_tools.py  file_io.py  git_tools.py  github_actions.py  history_log.py  ledger.py  logbook_utils.py  loop.py  managed_artifacts.py  preflight.py  prompt_logging.py  runner_common.py  schemas.py
src/codex_manager/brain/: __init__.py  connector.py  logbook.py  manager.py
src/codex_manager/cua/: __init__.py  actions.py  anthropic_cua.py  browser.py  openai_cua.py  session.py
src/codex_manager/gui/: __init__.py  __main__.py  app.py  chain.py  models.py  presets.py  recipes.py  stop_guidance.py
src/codex_manager/gui/templates/: index.html
src/codex_manager/memory/: __init__.py  vector_store.py
src/codex_manager/monitoring/: __init__.py  model_watchdog.py
src/codex_manager/pipeline/: __init__.py  orchestrator.py  phases.py  tracker.py
src/codex_manager/prompts/: __init__.py  catalog.py  optimizer.py  templates.yaml
src/codex_manager/research/: __init__.py  deep_research.py
src/codex_manager/scientist/: __init__.py  engine.py
src/warpfoundry/: __init__.py  __main__.py
tests/: conftest.py  test_agent_runner.py  test_agent_signals.py  test_artifact_retention.py  test_artifact_retention_additional.py  test_brain_connector_env.py  test_brain_logbook.py  test_claude_code.py  test_codex_cli.py  test_cua_adapters.py  test_cua_browser.py  test_cua_provider_auth.py  test_cua_session.py  test_deep_research.py  test_encoding_hygiene.py  test_encoding_hygiene_additional.py  test_eval_tools.py  test_file_io.py  test_git_tools.py  test_github_actions.py  test_gui_app_api.py  test_gui_chain_terminate_repeats.py  test_gui_presets.py  test_gui_recipes.py  test_gui_stop_guidance.py  test_history_logbook.py  test_history_logbook_rotation.py  test_ledger.py  test_loop.py  test_main_entrypoint.py  test_managed_artifacts.py  test_model_watchdog.py  test_package_version.py  test_permission_config_validation.py  test_pipeline_orchestrator.py  test_pipeline_tracker.py  test_preflight.py  test_prompt_logging.py  test_prompts_catalog.py  test_prompts_optimizer.py  (+5 more)
